# ax-llm-for-Kylin-agent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.bat  install.sh  overlook.cmake  uninstall.bat  uninstall.sh
docker/ax650/: Dockerfile
docker/axcl/: Dockerfile
docs/: vision_encoder_patterns.md
scripts/: llama_embedding_demo.py  openai_demo.py  openai_embedding_demo.py  openai_video_demo.py  openai_vl_embedding_demo.py
scripts/docker/: build_ax650_image.sh  build_axcl_image.sh
src/: main.cpp
src/runner/: Gemma4PerLayerHelper.hpp  LLM.cpp  LLM.hpp  LLMEmbedSelector.hpp  LLMPostprocess.hpp  VLMType.hpp
src/runner/ax_model_runner/: ax_model_runner.hpp  ax_model_runner_ax650.cpp  ax_model_runner_ax650.hpp  ax_model_runner_axcl.cpp  ax_model_runner_axcl.hpp
src/runner/utils/: audio_processor.cpp  audio_processor.hpp  ax_cmm_utils.hpp  ax_cv.hpp  axcl_manager.cpp  bfloat16.hpp  cqdm.cpp  cqdm.h  files.cpp  files.hpp  image_processor.cpp  image_processor.hpp  logger.cpp  logger.hpp  memory_utils.hpp  mrope.cpp  mrope.hpp  net_utils.cpp  net_utils.hpp  sample_log.h
src/runner/vision/: vision_module.cpp  vision_module.hpp
toolchains/: riscv64-unknown-linux-gnu.toolchain.cmake
tools/: llm_smoke.cpp  tokenizer_smoke.cpp
tools/smoke_assets/: README.md
